<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_neuralrecon</name>
  <version>0.0.1</version>
  <description>ROS 1 node for NeuralRecon project</description>

  <maintainer email="contact@smellslikeml.com">Smells Like ML</maintainer>
  <license>TODO</license>
  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>rostest</depend>
  <depend>rosnumpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ros_neuralrecon_msgs</depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>

  <test_depend>rosunit</test_depend>
  
</package>

